// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`es5.js transformed matches screenshot 1`] = `
"module.exports.handler = require('iopipe')({clientId: 'DEFAULT_TOKEN'})(function(event, context, callback){
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
});
"
`;

exports[`hasLib.js transformed matches screenshot 1`] = `
"const iopipe = require('iopipe')({clientId: 'FOOBAR'});

module.exports.handler = iopipe((event, context, callback) => {
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
});
"
`;

exports[`multiple.js transformed matches screenshot 1`] = `
"module.exports.doNotHandle = (event, context, callback) => {
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
};

module.exports.handler = require('iopipe')({clientId: 'DEFAULT_TOKEN'})((event, context, callback) => {
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
});
"
`;

exports[`noModule.js transformed matches screenshot 1`] = `
"exports.handler = require('iopipe')({clientId: 'DEFAULT_TOKEN'})((event, context, callback) => {
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
});
"
`;

exports[`simple.js transformed matches screenshot 1`] = `
"module.exports.handler = require('iopipe')({clientId: 'DEFAULT_TOKEN'})((event, context, callback) => {
  const response = {
    statusCode: 200,
    body: JSON.stringify({
      message: 'Go Serverless v1.0! Your function executed successfully!',
      input: event
    })
  };
  callback(null, response);
});
"
`;
